--- a/app/src/main/res/layout-v19/fragment_left_navigation_drawer.xml
+++ b/app/src/main/res/layout-v19/fragment_left_navigation_drawer.xml
@@ -17,18 +17,17 @@
             <RelativeLayout
                 android:id="@+id/user_layout"
                 android:layout_width="fill_parent"
-                android:layout_height="180.0dip"
-                android:background="@color/colorPrimaryDark"
-                android:visibility="gone">
+                android:layout_height="200dp"
+                android:background="@color/colorPrimaryDark">
 
                 <com.shuan.palakkadweekly.Utils.CircleImageView
                     android:id="@+id/user_img"
                     android:layout_width="64.0dip"
                     android:layout_height="64.0dip"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
+                    android:layout_marginBottom="8.0dip"
                     android:layout_marginLeft="24.0dip"
-                    android:layout_marginTop="36.0dip"
+                    android:layout_marginTop="24.0dip"
                     android:scaleType="centerCrop"
                     android:src="@drawable/user"
                     app:civ_border_color="#ffffffff"
@@ -41,41 +40,22 @@
                     android:layout_below="@id/user_img"
                     android:layout_centerHorizontal="true"
                     android:layout_marginLeft="24.0dip"
-                    android:text="User Name"
+                    android:text=""
+                    android:textAppearance="?android:textAppearanceMedium"
                     android:textColor="@color/textColor"
-                    android:textSize="16.0sp"
-                    android:textStyle="bold" />
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:id="@+id/user_layout1"
-                android:layout_width="fill_parent"
-                android:layout_height="180.0dip"
-                android:background="@color/colorPrimaryDark">
-
-                <TextView
-                    android:id="@+id/app_logo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginTop="36.0dip"
-                    android:text="@string/app_name"
-                    android:textColor="#ffffffff"
-                    android:textSize="20.0sp"
                     android:textStyle="bold" />
 
                 <Button
-                    android:id="@+id/sign_in"
-                    android:layout_width="100.0dip"
+                    android:id="@+id/upload"
+                    android:layout_width="130.0dip"
                     android:layout_height="30.0dip"
-                    android:layout_below="@id/app_logo"
+                    android:layout_below="@id/usr_name"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginTop="24.0dip"
+                    android:layout_marginTop="16.0dip"
                     android:background="@drawable/btn_rounded_corner"
                     android:padding="2.0dip"
                     android:paddingLeft="10.0dip"
-                    android:text="@string/signIn"
+                    android:text="@string/upload"
                     android:textColor="#ff333333"
                     android:textSize="16.0dip" />
             </RelativeLayout>
@@ -120,45 +100,45 @@
                 android:alpha="0.3"
                 android:background="#ff333333" />
 
-           <!-- <RelativeLayout
-                android:id="@+id/col2"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/col1"
-                android:layout_margin="16.0dip">
+            <!-- <RelativeLayout
+                 android:id="@+id/col2"
+                 android:layout_width="fill_parent"
+                 android:layout_height="wrap_content"
+                 android:layout_below="@+id/col1"
+                 android:layout_margin="16.0dip">
 
-                <TextView
-                    android:id="@+id/edt"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="4.0dip"
-                    android:text="@string/edtlang"
-                    android:textAppearance="?android:textAppearanceMedium" />
+                 <TextView
+                     android:id="@+id/edt"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:layout_marginTop="4.0dip"
+                     android:text="@string/edtlang"
+                     android:textAppearance="?android:textAppearanceMedium" />
 
-                <Switch
-                    android:id="@+id/edition_lang"
-                    android:layout_width="wrap_content"
-                    android:layout_height="30.0dip"
-                    android:layout_alignParentRight="true"
-                    android:thumb="@drawable/customswitchselector"
-                    android:track="@drawable/custom_track" />
-            </RelativeLayout>
+                 <Switch
+                     android:id="@+id/edition_lang"
+                     android:layout_width="wrap_content"
+                     android:layout_height="30.0dip"
+                     android:layout_alignParentRight="true"
+                     android:thumb="@drawable/customswitchselector"
+                     android:track="@drawable/custom_track" />
+             </RelativeLayout>
 
-            <View
-                android:layout_width="fill_parent"
-                android:layout_height="1.0dip"
-                android:layout_below="@+id/col2"
-                android:layout_marginLeft="16.0dip"
-                android:layout_marginRight="16.0dip"
-                android:alpha="0.3"
-                android:background="#ff333333" />-->
+             <View
+                 android:layout_width="fill_parent"
+                 android:layout_height="1.0dip"
+                 android:layout_below="@+id/col2"
+                 android:layout_marginLeft="16.0dip"
+                 android:layout_marginRight="16.0dip"
+                 android:alpha="0.3"
+                 android:background="#ff333333" />-->
 
             <RelativeLayout
                 android:id="@+id/col9"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="16.0dip"
-                android:layout_below="@+id/col1">
+                android:layout_below="@+id/col1"
+                android:layout_margin="16.0dip">
 
                 <TextView
                     android:id="@+id/edition"
@@ -172,17 +152,19 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true">
+
                     <TextView
                         android:id="@+id/edtn"
-                        android:text="Edition"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"/>
+                        android:layout_marginTop="8dp"
+                        android:text="Edition" />
+
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_arrow_right"
-                        android:layout_toRightOf="@+id/edtn"/>
+                        android:layout_toRightOf="@+id/edtn"
+                        android:src="@drawable/ic_arrow_right" />
                 </RelativeLayout>
             </RelativeLayout>
 
@@ -227,36 +209,11 @@
             android:layout_marginTop="16.0dip"
             android:background="#ffffffff">
 
-            <RelativeLayout
-                android:id="@+id/col4"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="16.0dip"
-                android:background="?android:selectableItemBackground">
-
-                <TextView
-                    android:id="@+id/fet"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:text="@string/fet"
-                    android:textAppearance="?android:textAppearanceMedium" />
-            </RelativeLayout>
-
-            <View
-                android:layout_width="fill_parent"
-                android:layout_height="1.0dip"
-                android:layout_below="@+id/col4"
-                android:layout_marginLeft="16.0dip"
-                android:layout_marginRight="16.0dip"
-                android:alpha="0.3"
-                android:background="#ff333333" />
 
             <RelativeLayout
                 android:id="@+id/col5"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/col4"
                 android:layout_margin="16.0dip"
                 android:background="?android:selectableItemBackground">
 
@@ -295,57 +252,7 @@
                     android:textAppearance="?android:textAppearanceMedium" />
             </RelativeLayout>
 
-            <View
-                android:layout_width="fill_parent"
-                android:layout_height="1.0dip"
-                android:layout_below="@+id/col6"
-                android:layout_marginLeft="16.0dip"
-                android:layout_marginRight="16.0dip"
-                android:alpha="0.3"
-                android:background="#ff333333" />
 
-            <RelativeLayout
-                android:id="@+id/col7"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/col6"
-                android:layout_margin="16.0dip"
-                android:background="?android:selectableItemBackground">
-
-                <TextView
-                    android:id="@+id/abt"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:text="@string/abtus"
-                    android:textAppearance="?android:textAppearanceMedium" />
-            </RelativeLayout>
-
-            <View
-                android:layout_width="fill_parent"
-                android:layout_height="1.0dip"
-                android:layout_below="@+id/col7"
-                android:layout_marginLeft="16.0dip"
-                android:layout_marginRight="16.0dip"
-                android:alpha="0.3"
-                android:background="#ff333333" />
-
-            <RelativeLayout
-                android:id="@+id/col8"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/col7"
-                android:layout_margin="16.0dip"
-                android:background="?android:selectableItemBackground">
-
-                <TextView
-                    android:id="@+id/set"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:text="@string/sting"
-                    android:textAppearance="?android:textAppearanceMedium" />
-            </RelativeLayout>
         </RelativeLayout>
     </RelativeLayout>
 </ScrollView>
