--- a/app/src/main/res/layout/news_list_item.xml
+++ b/app/src/main/res/layout/news_list_item.xml
@@ -1,52 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    card_view:cardCornerRadius="4dp">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:orientation="vertical">
+        android:layout_width="180.0dip"
+        android:layout_height="180.0dip">
 
         <RelativeLayout
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content">
 
             <ImageView
-                android:id="@+id/small_content_img"
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:elevation="8dp"
-                android:scaleType="fitXY"
+                android:id="@id/small_content_img"
+                android:layout_width="fill_parent"
+                android:layout_height="180.0dip"
+                android:scaleType="centerCrop"
                 android:src="@drawable/example" />
         </RelativeLayout>
 
-
         <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_width="fill_parent"
+            android:layout_height="40.0dip"
             android:layout_alignParentBottom="true"
             android:background="@color/transparent_color">
 
             <TextView
-                android:id="@+id/nattu_vartha_id"
+                android:id="@id/nattu_vartha_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:visibility="gone"/>
+                android:visibility="gone" />
 
             <TextView
-                android:id="@+id/title"
+                android:id="@id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:text="Heading"
-                android:textColor="#fff"
-                android:textSize="16sp"
+                android:textColor="#ffffffff"
+                android:textSize="16.0sp"
                 android:textStyle="bold" />
         </RelativeLayout>
-
     </RelativeLayout>
-
 </android.support.v7.widget.CardView>
